<resources>
    <string name="app_name">Sports_App_Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="Service">Service</string>
    <string name="Limit">Limit</string>
    <string name="Out">Out</string>
    <string name="Score">Score</string>
    <string name="Team1">Team 1</string>
    <string name="Team2">Team 2</string>
    <string name="Smash">Smash</string>
    <string name="Classic">Classic</string>
    <string name="Fault">Fault</string>
    <string name="Rally">Rally</string>
    <string name="Let">Let</string>
    <string name="Time_out">Time out</string>
    <string name="Ace">Ace</string>
    <string name="New_m">New match</string>
    <string name="Local_m">Match Location</string>
    <string name="Set_1">Set 1</string>
    <string name="Set_2">Set 2</string>
    <string name="Set_3">Set 3</string>
    <string name="Set_4">Set 4</string>
    <string name="Team">Team :</string>
    <string name="Standing">Standing</string>
    <string name="Number_match">How many matches</string>
    <string name="English">English</string>
    <string name="French">Français</string>
    <string name="Put_mark">Put a mark on the location of the match</string>
</resources>
