<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rinaattieh.sports_app_project.NewMatch">

    <TextView
        android:text="@string/Service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:id="@+id/service"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/btn_map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/time_out"
        android:layout_alignLeft="@+id/ace"
        android:layout_alignStart="@+id/ace"
        android:id="@+id/limit" />

    <Button
        android:text="@string/Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/limit"
        android:layout_alignRight="@+id/filet"
        android:layout_alignEnd="@+id/filet"
        android:id="@+id/out" />

    <TextView
        android:text="@string/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/score"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/team1"
        android:layout_below="@+id/echange"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Smash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smash_t1"
        android:layout_below="@+id/team1"
        android:layout_alignLeft="@+id/time_out"
        android:layout_alignStart="@+id/time_out" />

    <TextView
        android:text="@string/Team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/team2"
        android:layout_below="@+id/smash_t1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Smash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smash_t2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/smash_t1"
        android:layout_alignStart="@+id/smash_t1" />

    <Button
        android:text="@string/Classic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/class_t1"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/smash_t1"/>

    <Button
        android:text="@string/Classic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/class_t2"
        android:layout_alignBaseline="@+id/smash_t2"
        android:layout_alignBottom="@+id/smash_t2"
        android:layout_alignLeft="@+id/limit" />

    <Button
        android:text="@string/Fault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faute_t2"
        android:layout_alignBaseline="@+id/class_t2"
        android:layout_alignBottom="@+id/class_t2"
        android:layout_alignLeft="@+id/faute_t1"
        android:layout_alignStart="@+id/faute_t1" />

    <TextView
        android:text="@string/Rally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/echange"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/time_out"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serv"
        android:layout_below="@+id/service"
        android:layout_toLeftOf="@+id/class_t1"
        android:layout_toStartOf="@+id/class_t1"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="13dp" />

    <Button
        android:text="@string/Let"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filet"
        android:layout_alignBaseline="@+id/ace"
        android:layout_alignBottom="@+id/ace"
        android:layout_alignLeft="@+id/btn_map"
        android:layout_alignStart="@+id/btn_map" />

    <Button
        android:text="@string/Time_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/time_out"
        android:layout_below="@+id/serv"
        android:layout_alignRight="@+id/serv"
        android:layout_alignEnd="@+id/serv" />

    <Button
        android:text="@string/Ace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ace"
        android:layout_alignBaseline="@+id/serv"
        android:layout_alignBottom="@+id/serv"
        android:layout_alignLeft="@+id/class_t1"
        android:layout_alignStart="@+id/class_t1" />

    <Button
        android:text="@string/Fault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faute_t1"
        android:layout_alignBaseline="@+id/class_t1"
        android:layout_alignBottom="@+id/class_t1"
        android:layout_toRightOf="@+id/class_t1"
        android:layout_toEndOf="@+id/class_t1"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="@string/New_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="cursive"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:text="@string/Local_m"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:layout_alignTop="@+id/score"
        android:layout_toRightOf="@+id/ace" />

</RelativeLayout>
